[gd_scene load_steps=4 format=3 uid="uid://3u8uwit4858y"]

[ext_resource type="Script" uid="uid://6csx4qqst4e" path="res://scenes/menus/computer_ui.gd" id="1_8uwfk"]
[ext_resource type="Texture2D" uid="uid://cxk6nu1ccte05" path="res://assets/tilesets/asset gemini/basecamp/layar komputer misi.png" id="2_we1ic"]
[ext_resource type="FontFile" uid="uid://sdehxe5o7ttb" path="res://assets/font/small-pixel7/small_pixel-7.ttf" id="3_x0iuw"]

[node name="ComputerUI" type="CanvasLayer"]
script = ExtResource("1_8uwfk")

[node name="Panel" type="Panel" parent="."]
offset_right = 1129.0
offset_bottom = 712.0

[node name="NinePatchRect" type="NinePatchRect" parent="Panel"]
texture_filter = 2
texture_repeat = 2
layout_mode = 0
offset_right = 1277.0
offset_bottom = 720.0
texture = ExtResource("2_we1ic")

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 490.0
offset_top = 642.0
offset_right = 736.0
offset_bottom = 696.0
text = "Close"

[node name="ScrollContainer" type="VScrollBar" parent="Panel"]
layout_mode = 0
offset_left = 302.0
offset_top = 118.0
offset_right = 982.0
offset_bottom = 506.0

[node name="LabelMission" type="Label" parent="Panel/ScrollContainer"]
layout_mode = 0
offset_left = 20.0
offset_top = 15.0
offset_right = 661.0
offset_bottom = 242.0
theme_override_fonts/font = ExtResource("3_x0iuw")
theme_override_font_sizes/font_size = 22
